<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_bridge</name>
  <version>0.0.0</version>
  <description>The carla_bridge package</description>
  <maintainer email="shaohang@todo.todo">shaohang</maintainer>
  <license>TODO</license>

  <depend>iss_msgs</depend>
  <depend>planning</depend>
  <exec_depend>ros2launch</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
